--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="header-mid">
             <div class="mid">
                 <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <p class="parrafo">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
             </div>
-            <div style="width:500px;height:100px;border:1px solid grey;">This is a placeholder for an image</div>
+            <div class="rec">This is a placeholder for an image</div>
         </div>
     </div>
 </body>
