--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer Proyecto</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;0,900;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet"> 
 </head>
 <body style= "margin:0">
     <div class="container">
         <div class="header">
             <h3>Header Logo</h3>
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
         <div class="header-mid">
@@ -26,5 +29,46 @@
             <div class="rec">This is a placeholder for an image</div>
         </div>
     </div>
+    <div class="random">
+        <h2>Some random information.</h2>
+        <div class="rectangulo">
+
+            <div class="uno">
+                <div class="rec1"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="uno">
+                <div class="rec1"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="uno">
+                <div class="rec1"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="uno">
+                <div class="rec1"></div>
+                <p>this is some subtext under an illustration or image</p> 
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="frase">
+            <p class="texto">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="autor">-Thor, God of Thunder</p>
+        </div>
+    </div>
+    <div class="call">
+        <div class="azul">
+            <div class="llamado">
+                <p class="time">Call to action! It's time!</p>
+                <p class="sign">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="boton">Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <p>Copyright © The Odin Project 2022</p>
+    </div>
+
 </body>
 </html>
