Github Page Completed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="mid">
                 <h1>This website is awesome</h1>
                 <p class="parrafo">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button>Sign up</button>
+                <button><a href="#">Sign up</a></button>
             </div>
             <div class="rec">This is a placeholder for an image</div>
         </div>
@@ -63,7 +63,7 @@
                 <p class="time">Call to action! It's time!</p>
                 <p class="sign">Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button class="boton">Sign up</button>
+            <button class="boton"><a href="#">Sign up</a></button>
         </div>
     </div>
     <div class="footer">
